--- a/src/style.css
+++ b/src/style.css
@@ -15,13 +15,6 @@
     font-weight: normal;
 }
 
-.city-image {
-    opacity: 85%;
-    height: 10vh;
-    width: 50vw;
-    align-self: center;
-}
-
 .search-bar {
     display: flex;
     flex-direction: column;
@@ -42,10 +35,10 @@
     outline: none!important;
 }
 
-.card {
+.second-container {
     display: flex;
+    width: 90%;
     justify-content: center;
-    align-self: center;
     color: #4a4646;
 }
 
@@ -66,6 +59,7 @@
     width: 50vw;
     margin: 5%;
     padding: 3%;
+    font-size: 2.5vw;
 }
 
 .foto {
