--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -65,7 +65,7 @@
 .foto {
     display: flex;
     width: 30vw;
-    align-self: center;
+    /* align-self: center; */
     justify-content: center;
     margin: 3%;
 }
